fixed view gallery button spacing

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -132,6 +132,7 @@
   height: max-content;
   gap: 83px;
   padding: 0px 83px 20px 83px;
+  margin-bottom: 20px;
 }
 
 .featured-item {
